@@ -1,101 +1,101 @@
-event_id,rup_id,year,rlzi,magnitude,centroid_lon,centroid_lat,centroid_depth,structural
-1387274436610,323,1,2,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,2.81813E+05
-2250562863105,524,1,1,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,2.10290E+05
-2250562863106,524,1,2,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.88990E+05
-3624952397826,844,1,2,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.35602E+05
-4058744094723,945,1,3,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,9.78285E+05
-8027293876225,1869,1,1,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,1.56202E+05
-8701603741698,2026,1,2,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,4.16564E+05
-11046655885313,2572,1,1,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,1.21462E+05
-2246267895811,523,2,3,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,7.90292E+05
-2761663971330,643,2,2,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,3.56660E+05
-3191160700930,743,2,2,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,2.43649E+05
-3882650435585,904,2,1,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,2.57715E+05
-11317238824962,2635,2,2,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,8.35348E+05
-1400159338497,326,3,1,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.63362E+05
-2246267895810,523,3,2,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,6.53098E+05
-2336462209024,544,3,0,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,2.17392E+05
-3362959392770,783,3,2,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,2.68345E+05
-8027293876224,1869,3,0,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,4.99714E+05
-8027293876226,1869,3,2,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,6.16709E+05
-10080288243713,2347,3,1,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.21302E+06
-10694468567042,2490,3,2,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.32311E+05
-1400159338496,326,4,0,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,6.64163E+05
-1400159338498,326,4,2,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.34926E+05
-2761663971329,643,4,1,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,2.07793E+05
-3277060046849,763,4,1,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,1.00648E+05
-8289286881280,1930,4,0,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,4.39626E+05
-8289286881281,1930,4,1,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,3.42422E+04
-10694468567040,2490,4,0,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,2.22198E+05
-10694468567041,2490,4,1,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.46539E+05
-10694468567043,2490,4,3,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.90604E+05
-11317238824960,2635,4,0,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,5.67376E+05
-1387274436611,323,5,3,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,3.40492E+05
-2250562863107,524,5,3,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.80098E+05
-2336462209025,544,5,1,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,1.48068E+05
-2336462209027,544,5,3,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,3.23470E+05
-3191160700931,743,5,3,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,2.81465E+05
-3362959392768,783,5,0,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,1.81692E+05
-3796751089664,884,5,0,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,6.26517E+05
-3882650435587,904,5,3,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,1.40819E+06
-3981434683394,927,5,2,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,2.45366E+06
-3981434683395,927,5,3,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,1.92884E+06
-8289286881283,1930,5,3,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,7.48274E+05
-8701603741696,2026,5,0,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,2.68549E+05
-10707353468929,2493,5,1,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,1.95176E+05
-10707353468930,2493,5,2,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,4.65122E+05
-11046655885315,2572,5,3,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,7.74262E+05
-1404454305792,327,6,0,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,1.01459E+06
-1404454305794,327,6,2,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,1.18122E+06
-3362959392769,783,6,1,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,1.83509E+04
-3624952397827,844,6,3,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.26406E+05
-3981434683393,927,6,1,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,2.46605E+05
-4058744094720,945,6,0,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,7.03399E+05
-4058744094721,945,6,1,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,3.73819E+05
-7262789697536,1691,6,0,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,5.88924E+05
-7262789697537,1691,6,1,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,8.99248E+04
-8104603287554,1887,6,2,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.68103E+06
-8701603741699,2026,6,3,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,5.06143E+05
-1387274436609,323,7,1,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,5.34332E+05
-2246267895809,523,7,1,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,1.38954E+05
-3191160700929,743,7,1,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,5.75197E+05
-3277060046850,763,7,2,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,8.67071E+05
-3882650435586,904,7,2,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,1.40856E+06
-7262789697538,1691,7,2,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,9.07335E+05
-7262789697539,1691,7,3,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,8.72957E+05
-8027293876227,1869,7,3,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,4.86104E+05
-8104603287555,1887,7,3,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.25643E+06
-8289286881282,1930,7,2,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,6.48888E+05
-10080288243714,2347,7,2,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.21133E+06
-11046655885312,2572,7,0,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,5.90460E+05
-11046655885314,2572,7,2,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,8.87699E+05
-11317238824961,2635,7,1,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,5.95358E+05
-1400159338499,326,8,3,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,6.66035E+05
-2250562863104,524,8,0,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,4.03142E+05
-3191160700928,743,8,0,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,1.87548E+05
-3277060046848,763,8,0,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,6.43371E+05
-3362959392771,783,8,3,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,3.04580E+05
-3624952397824,844,8,0,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,2.46533E+05
-3796751089666,884,8,2,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,8.04391E+05
-3882650435584,904,8,0,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,9.47326E+05
-8104603287552,1887,8,0,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.45364E+06
-8701603741697,2026,8,1,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,3.31676E+04
-10080288243715,2347,8,3,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.13249E+06
-11317238824963,2635,8,3,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,7.96391E+05
-1387274436608,323,9,0,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,2.07038E+05
-1404454305795,327,9,3,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.99365E+05
-2246267895808,523,9,0,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.56055E+05
-2761663971328,643,9,0,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,3.33887E+05
-3277060046851,763,9,3,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,1.02367E+06
-3624952397825,844,9,1,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.76928E+05
-3796751089665,884,9,1,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,5.17065E+04
-3796751089667,884,9,3,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,8.18290E+05
-10080288243712,2347,9,0,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,8.52781E+05
-10707353468928,2493,9,0,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.09982E+05
-10707353468931,2493,9,3,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.52195E+05
-1404454305793,327,10,1,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,5.86861E+05
-2336462209026,544,10,2,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,3.34182E+05
-2761663971331,643,10,3,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,4.55680E+05
-3981434683392,927,10,0,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,1.81150E+06
-4058744094722,945,10,2,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,1.14143E+06
-8104603287553,1887,10,1,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.90782E+06
+event_id,rup_id,year,magnitude,centroid_lon,centroid_lat,centroid_depth,structural
+1387274436610,323,1,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,2.81813E+05
+2250562863105,524,1,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,2.10290E+05
+2250562863106,524,1,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.88990E+05
+3624952397826,844,1,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.35602E+05
+4058744094723,945,1,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,9.78285E+05
+8027293876225,1869,1,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,1.56202E+05
+8701603741698,2026,1,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,4.16564E+05
+11046655885313,2572,1,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,1.21462E+05
+2246267895811,523,2,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,7.90292E+05
+2761663971330,643,2,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,3.56660E+05
+3191160700930,743,2,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,2.43649E+05
+3882650435585,904,2,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,2.57715E+05
+11317238824962,2635,2,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,8.35348E+05
+1400159338497,326,3,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.63362E+05
+2246267895810,523,3,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,6.53098E+05
+2336462209024,544,3,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,2.17392E+05
+3362959392770,783,3,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,2.68345E+05
+8027293876224,1869,3,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,4.99714E+05
+8027293876226,1869,3,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,6.16709E+05
+10080288243713,2347,3,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.21302E+06
+10694468567042,2490,3,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.32311E+05
+1400159338496,326,4,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,6.64163E+05
+1400159338498,326,4,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.34926E+05
+2761663971329,643,4,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,2.07793E+05
+3277060046849,763,4,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,1.00648E+05
+8289286881280,1930,4,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,4.39626E+05
+8289286881281,1930,4,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,3.42422E+04
+10694468567040,2490,4,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,2.22198E+05
+10694468567041,2490,4,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.46539E+05
+10694468567043,2490,4,4.70000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.90604E+05
+11317238824960,2635,4,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,5.67376E+05
+1387274436611,323,5,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,3.40492E+05
+2250562863107,524,5,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.80098E+05
+2336462209025,544,5,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,1.48068E+05
+2336462209027,544,5,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,3.23470E+05
+3191160700931,743,5,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,2.81465E+05
+3362959392768,783,5,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,1.81692E+05
+3796751089664,884,5,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,6.26517E+05
+3882650435587,904,5,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,1.40819E+06
+3981434683394,927,5,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,2.45366E+06
+3981434683395,927,5,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,1.92884E+06
+8289286881283,1930,5,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,7.48274E+05
+8701603741696,2026,5,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,2.68549E+05
+10707353468929,2493,5,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,1.95176E+05
+10707353468930,2493,5,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,4.65122E+05
+11046655885315,2572,5,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,7.74262E+05
+1404454305792,327,6,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,1.01459E+06
+1404454305794,327,6,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,1.18122E+06
+3362959392769,783,6,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,1.83509E+04
+3624952397827,844,6,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.26406E+05
+3981434683393,927,6,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,2.46605E+05
+4058744094720,945,6,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,7.03399E+05
+4058744094721,945,6,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,3.73819E+05
+7262789697536,1691,6,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,5.88924E+05
+7262789697537,1691,6,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,8.99248E+04
+8104603287554,1887,6,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.68103E+06
+8701603741699,2026,6,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,5.06143E+05
+1387274436609,323,7,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,5.34332E+05
+2246267895809,523,7,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,1.38954E+05
+3191160700929,743,7,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,5.75197E+05
+3277060046850,763,7,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,8.67071E+05
+3882650435586,904,7,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,1.40856E+06
+7262789697538,1691,7,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,9.07335E+05
+7262789697539,1691,7,4.90000E+00,2.64813E+01,3.86216E+01,1.32000E+01,8.72957E+05
+8027293876227,1869,7,5.30000E+00,2.57872E+01,3.82618E+01,1.32000E+01,4.86104E+05
+8104603287555,1887,7,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.25643E+06
+8289286881282,1930,7,4.70000E+00,2.67035E+01,3.82618E+01,1.32000E+01,6.48888E+05
+10080288243714,2347,7,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.21133E+06
+11046655885312,2572,7,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,5.90460E+05
+11046655885314,2572,7,5.10000E+00,2.55342E+01,3.88191E+01,1.32000E+01,8.87699E+05
+11317238824961,2635,7,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,5.95358E+05
+1400159338499,326,8,5.30000E+00,2.78286E+01,4.03983E+01,1.32000E+01,6.66035E+05
+2250562863104,524,8,4.90000E+00,2.73525E+01,4.02184E+01,1.32000E+01,4.03142E+05
+3191160700928,743,8,4.70000E+00,2.68789E+01,4.00385E+01,1.32000E+01,1.87548E+05
+3277060046848,763,8,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,6.43371E+05
+3362959392771,783,8,4.70000E+00,2.73487E+01,4.00385E+01,1.32000E+01,3.04580E+05
+3624952397824,844,8,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,2.46533E+05
+3796751089666,884,8,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,8.04391E+05
+3882650435584,904,8,4.90000E+00,2.64078E+01,3.98587E+01,1.32000E+01,9.47326E+05
+8104603287552,1887,8,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.45364E+06
+8701603741697,2026,8,4.70000E+00,2.60140E+01,3.80820E+01,1.32000E+01,3.31676E+04
+10080288243715,2347,8,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,1.13249E+06
+11317238824963,2635,8,4.90000E+00,2.64576E+01,3.88191E+01,1.32000E+01,7.96391E+05
+1387274436608,323,9,4.70000E+00,2.78286E+01,4.03983E+01,1.32000E+01,2.07038E+05
+1404454305795,327,9,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,8.99365E+05
+2246267895808,523,9,4.70000E+00,2.73525E+01,4.02184E+01,1.32000E+01,5.56055E+05
+2761663971328,643,9,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,3.33887E+05
+3277060046851,763,9,4.70000E+00,2.71138E+01,4.00385E+01,1.32000E+01,1.02367E+06
+3624952397825,844,9,4.90000E+00,2.80535E+01,4.00385E+01,1.32000E+01,3.76928E+05
+3796751089665,884,9,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,5.17065E+04
+3796751089667,884,9,4.90000E+00,2.85234E+01,4.00385E+01,1.32000E+01,8.18290E+05
+10080288243712,2347,9,4.90000E+00,2.66991E+01,3.93587E+01,1.32000E+01,8.52781E+05
+10707353468928,2493,9,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.09982E+05
+10707353468931,2493,9,5.30000E+00,2.57662E+01,3.89989E+01,1.32000E+01,3.52195E+05
+1404454305793,327,10,5.50000E+00,2.78286E+01,4.03983E+01,1.32000E+01,5.86861E+05
+2336462209026,544,10,4.90000E+00,2.75880E+01,4.02184E+01,1.32000E+01,3.34182E+05
+2761663971331,643,10,4.70000E+00,2.87658E+01,4.02184E+01,1.32000E+01,4.55680E+05
+3981434683392,927,10,5.50000E+00,2.66421E+01,3.98587E+01,1.32000E+01,1.81150E+06
+4058744094722,945,10,5.10000E+00,2.68764E+01,3.98587E+01,1.32000E+01,1.14143E+06
+8104603287553,1887,10,5.70000E+00,2.60163E+01,3.82618E+01,1.32000E+01,1.90782E+06
